[package]
name = "factory"
description = "Factory contract for OTC markets"
version = { workspace = true }
edition = { workspace = true }
authors =  { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-ownable = { workspace = true }
cw2 = {workspace = true }
thiserror = { workspace = true }
cw-utils = "1.0.1"
market = { path = "../../contracts/market" }
common      = { path = "../../packages/common" }

[dev-dependencies]
cw-multi-test = "0.20"
